# monorepo

./: .dockerignore  .eslintignore  .gitignore  .prettierignore  .prettierrc.js  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vitest.workspace.js
apps/comprender/: Cargo.toml  README.md  openapi.json
apps/comprender/benchmark/: benchmark.yml  payload.csv  payload.json
apps/comprender/src/: api_doc.rs  api_docs.rs  app.rs  lib.rs  main.rs
apps/comprender/src/app/: handler.rs  mod.rs
apps/comprender/src/core/: de.rs  utils.rs
apps/comprender/src/environment/: app_config.rs  config.rs  mod.rs
apps/comprender/src/error/: app_error.rs  extract.rs  mod.rs
apps/comprender/src/middlewares/: extract.rs
apps/comprender/src/models/: app_error.rs
apps/comprender/src/routes/: controller.rs  mod.rs
apps/web/: .env.example  .env.production  .eslintrc.js  Cargo.toml  README.md  build.sh  components.json  next.config.js  package-lock.json  package.json  postcss.config.js  remix.config.js  tailwind.config.js  tsconfig.json  vercel.json
apps/web/api/: crab.rs  graphic.rs  render.rs
apps/web/app/: layout.tsx  page.tsx
apps/web/public/templates/: default.json
apps/web/rust/models/: app_error.rs
apps/web/src/: logger.ts
apps/web/src/app/: entry.server.tsx  globals.scss  layout.tsx  page.tsx  root.tsx
apps/web/src/components/: MaxWidthWrapper.tsx  index.ts
apps/web/src/core/: fetch-clients.ts  index.ts
apps/web/src/environment/: utils.ts
apps/web/src/hooks/: index.ts  use-prepared-dtif.ts  use-svg-composition.ts
crates/arb_asset/: Cargo.toml
crates/arb_asset/src/: lib.rs
crates/arb_bundles/: Cargo.toml
crates/arb_bundles/src/: events.rs  lib.rs  properties.rs  reference_id.rs
crates/arb_bundles/src/components/: marker.rs  mixins.rs  nodes.rs  paints.rs  styles.rs
crates/arb_core/: Cargo.toml
crates/arb_core/src/: lib.rs
crates/arb_core/src/resources/: canvas.rs  mod.rs  referencer.rs
crates/arb_core/src/systems/: cleanup.rs  events.rs  hierarchy.rs  stroke.rs  text.rs  vector.rs
crates/arb_dtif/: Cargo.toml
crates/arb_dtif/src/: lib.rs
crates/arb_interaction/: Cargo.toml
crates/arb_interaction/src/: events.rs  lib.rs  utils.rs
crates/arb_interaction/src/input/: keyboard.rs  mouse.rs
crates/arb_interaction/src/resources/: arb_interaction.rs  mod.rs
crates/arb_interaction/src/systems/: mod.rs
crates/attributed_string/: Cargo.toml  README.md
crates/attributed_string/src/: attribute.rs  attrs.rs  bidi_para.rs  font.rs  fonts_cache.rs  glyph.rs  glyph_clusters.rs  lib.rs  line.rs  script.rs  shape.rs  span.rs  text_attrs.rs  token.rs  utils.rs
crates/attributed_string/src/layout/: layout_config.rs  layout_handler.rs  layouter.rs  line.rs  mod.rs
crates/attributed_string/src/line_wrap/: mod.rs  no_wrap.rs  text_fragment_wrap.rs  word_wrap.rs
crates/attributed_string/src/outline/: mod.rs  path_builder.rs  tiny_skia_path_builder.rs
crates/attributed_string/src/shape_tokens/: bitmap.rs  glyph.rs  linebreak.rs  mod.rs  text_fragment.rs  word_separator.rs
crates/attributed_string/src/tokens/: bitmap.rs  glyph.rs  line.rs  linebreak.rs  mod.rs  paragraph.rs  span.rs  text_fragment.rs  word_separator.rs
crates/attributed_string/src/usvg/: byte_index.rs  database.rs  geom.rs  glyph.rs  mod.rs  outlined_cluster.rs  text.rs
crates/attributed_string/tests/: integration.rs
crates/attributed_string/tests/common/: mod.rs
crates/bevy_render_skeleton/: Cargo.toml  README.md
crates/bevy_render_skeleton/src/: extract_param.rs  lib.rs
crates/cnv_core/: Cargo.toml
crates/cnv_core/src/: lib.rs
crates/cnv_core/src/resources/: canvas.rs  mod.rs  referencer.rs
crates/cnv_core/src/systems/: cleanup.rs  events.rs  hierarchy.rs  stroke.rs  text.rs  vector.rs
crates/cnv_dtif/: Cargo.toml
crates/cnv_dtif/src/: lib.rs
crates/cnv_interaction/: Cargo.toml
crates/cnv_interaction/src/: events.rs  lib.rs  utils.rs
crates/cnv_interaction/src/input/: mouse.rs
crates/cnv_interaction/src/resources/: cnv_interaction.rs  mod.rs
crates/cnv_interaction/src/systems/: mod.rs
crates/cnv_svg_builder/: Cargo.toml
crates/cnv_svg_builder/src/: lib.rs
crates/cnv_svg_builder/src/resources/: changed_svg_bundles.rs
crates/cnv_svg_builder/src/svg/: mod.rs
crates/cnv_svg_builder/src/systems/: apply.rs  extract.rs  prepare.rs  queue.rs
crates/comp_asset/: Cargo.toml
crates/comp_asset/src/: asset.rs  asset_id.rs  lib.rs  resources.rs
crates/comp_bundles/: Cargo.toml
crates/comp_bundles/src/: events.rs  lib.rs  mapper.rs  properties.rs  reference_id.rs  utils.rs  viewport.rs
crates/comp_bundles/src/components/: marker.rs  mixins.rs  mod.rs  nodes.rs  paints.rs  styles.rs
crates/comp_core/: Cargo.toml
crates/comp_core/src/: debug.rs  lib.rs
crates/comp_dtif/: Cargo.toml
crates/comp_dtif/src/: dtif_handler.rs  dtif_injector.rs  events.rs  lib.rs  nodes.rs  paints.rs  styles.rs
crates/comp_interaction/: Cargo.toml
crates/comp_interaction/src/: components.rs  events.rs  lib.rs  utils.rs
crates/comp_lua/: Cargo.toml
crates/comp_lua/src/: freeze.rs  json.rs  lib.rs  script.rs
crates/comp_svg_builder/: Cargo.toml  README.md
crates/comp_svg_builder/src/: events.rs  lib.rs
crates/composition/: Cargo.toml  README.md
crates/composition/src/: composition.rs
crates/dyn_units/: Cargo.toml
crates/dyn_units/src/: abs.rs  lib.rs  scalar.rs
crates/fonts_book/: Cargo.toml
crates/fonts_book/src/: database.rs  lib.rs
crates/svg_render/: Cargo.toml
crates/svg_render/src/: composition_change.rs  element_change.rs  lib.rs  mixin_change.rs  render_change.rs
crates/utils/: Cargo.toml
crates/utils/src/: color.rs  corner_radii.rs  lib.rs  serde.rs
v2/bevy_render_skeleton/: Cargo.toml
v2/bevy_render_skeleton/src/: camera.rs  lib.rs
v2/comp/: Cargo.toml
v2/comp/src/: lib.rs
v2/comp_asset/: Cargo.toml
v2/comp_asset/src/: asset.rs  asset_id.rs  resources.rs
v2/comp_core/: Cargo.toml
v2/comp_core/src/: lib.rs
(+1141 files in other folders)
