[workspace]
resolver = "2"
members = [
    "crates/*",
    "packages/cnv-svg-builder/rust",
    "apps/ee_graphic",
    "apps/web",
]
exclude = ["crates/_deprecated"]

[workspace.package]
edition = "2021"
homepage = "https://dyn.art/?source=package-json"
repository = "https://github.com/dyn-art/monorepo"
license = "AGPL-3.0-or-later"
authors = ["@bennoinbeta"]

[workspace.dependencies]
# Bevy
bevy_app = "0.13.2"
bevy_ecs = "0.13.2"
bevy_hierarchy = "0.13.2"
bevy_input = "0.13.2"
bevy_transform = "0.13.2"
bevy_utils = "0.13.2"

# Bindgen
# specta = { git = "https://github.com/oscartbeaumont/specta.git", rev = "5da3e56" }
specta = "=2.0.0-rc.12"
serde = "1.0.203"
serde_json = "1.0.117"
utoipa = "4.2.3"

# Logging
log = "0.4.21"
env_logger = "0.11.3"

# Utilities
glam = "0.25.0"
smallvec = "1.13.2"
tinyvec = "1.6.0"
tiny-skia-path = "0.11.4"
slotmap = "1.0.7"
