[package]
name = "dyn-comprender"
version = "0.0.1"
description = "Composition Render API"
edition = "2021"
homepage = "https://s.dyn.art/github"
repository = "https://github.com/dyndotart/monorepo"
license = "AGPL-3.0-or-later"

[features]
default = []
tracing = []
cli = ["dep:clap"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "dyn_comprender"    # Needs to be called like the package so that the Dockerfile can work with `dyn_[name]` pattern
path = "src/bin/server.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
dyn-comp-core = { path = "../../crates/comp_core", features = ["dtif"] }
dyn-comp-dtif = { path = "../../crates/comp_dtif" }
dyn-comp-common = { path = "../../crates/comp_common", features = [
    "serde_support",
] }
dyn-comp-svg-builder = { path = "../../crates/comp_svg_builder", features = [
    "serde_support",
    "output_svg_element_changes",
] }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_transform = { workspace = true }
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["full"] }
dotenv_config = "0.1.9"
dotenvy = "0.15.7"
resvg = "0.40.0"
usvg = "0.40.0"
tiny-skia = "0.11.4"
reqwest = "0.11.26"
svg2pdf = "0.10.0"

# Bindgen
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true, features = [
    "typescript",
    "serde",
    "glam",
    "bevy_ecs",
    "functions",
] }

# Logging
log = { workspace = true }

# cli (feature)
clap = { version = "4.5.1", features = ["derive"], optional = true }
utoipa = { version = "4.2.0", features = ["axum_extras"] }

[profile.release]
opt-level = "s"
lto = true

[profile.dev.package."*"]
opt-level = 3
