[package]
name = "dyn-comprender"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dyn_comprender"    # Needs to be called like the package so that the Dockerfile can work with `dyn_[name]` pattern
path = "src/bin/server.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[features]
default = []
cli = ["dep:clap"]
tracing = [
    "dyn-comp-core/tracing",
    "dyn-comp-svg-builder/tracing",
    "dyn-comp-dtif/tracing",
]

[dependencies]
dyn-comp-asset = { path = "../../crates/comp_asset" }
dyn-comp-core = { path = "../../crates/comp_core", features = [
    "serde_support",
] }
dyn-comp-dtif = { path = "../../crates/comp_dtif" }
dyn-comp-bundles = { path = "../../crates/comp_bundles", features = [
    "serde_support",
] }
dyn-comp-svg-builder = { path = "../../crates/comp_svg_builder", features = [
    "serde_support",
] }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_transform = { workspace = true }
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["full"] }
dotenv_config = "0.1.9"
dotenvy = "0.15.7"
resvg = "0.40.0"
usvg = "0.40.0"
fontdb = "0.16.2"
tiny-skia = "0.11.4"
reqwest = "0.11.26"
svg2pdf = "0.10.0"

# Bindgen
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true }

# Logging
log = { workspace = true }

# cli (feature)
clap = { version = "4.5.1", features = ["derive"], optional = true }
utoipa = { version = "4.2.0", features = ["axum_extras"] }

[profile.release]
opt-level = "s"
lto = true

[profile.dev.package."*"]
opt-level = 3
