[package]
name = "dyn-web-api"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
path = "rust/lib.rs"

[[bin]]
name = "render"
path = "api/render.rs"

[features]
default = []
tracing = [
    "dyn-comp-core/tracing",
    "dyn-comp-svg-builder/tracing",
    "dyn-comp-dtif/tracing",
]

[dependencies]
dyn-comp-asset = { path = "../../crates/comp_asset" }
dyn-comp-core = { path = "../../crates/comp_core", features = [
    "serde_support",
] }
dyn-comp-dtif = { path = "../../crates/comp_dtif" }
dyn-comp-bundles = { path = "../../crates/comp_bundles", features = [
    "serde_support",
] }
dyn-comp-svg-builder = { path = "../../crates/comp_svg_builder", features = [
    "serde_support",
] }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_transform = { workspace = true }

fontdb = "0.16.2"
tiny-skia = "0.11.4"
reqwest = "0.12.2"
resvg = "0.40.0"
svg2pdf = "0.10.0"
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
tokio = { version = "1.36.0", features = ["macros"] }
vercel_runtime = { version = "1.1.1" }
url = "2.5.0"
usvg = "0.40.0"

# Logging
log = { workspace = true }
