[package]
name = "dyn-web-api"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
path = "rust/lib.rs"

[[bin]]
name = "render"
path = "api/render.rs"

[features]
default = []
tracing = [
    "dyn-cnv-core/tracing",
    "dyn-cnv-svg-builder/tracing",
    "dyn-cnv-dtif/tracing",
]

[dependencies]
dyn-cnv-asset = { path = "../../crates/cnv_asset" }
dyn-cnv-core = { path = "../../crates/cnv_core", features = ["specta_support"] }
dyn-cnv-dtif = { path = "../../crates/cnv_dtif" }
dyn-cnv-bundles = { path = "../../crates/cnv_bundles", features = [
    "specta_support",
] }
dyn-cnv-svg-builder = { path = "../../crates/cnv_svg_builder", features = [
    "specta_support",
] }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_transform = { workspace = true }

fontdb = "0.16.2"
tiny-skia = "0.11.4"
reqwest = "0.12.2"
resvg = "0.40.0"
svg2pdf = "0.10.0"
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
tokio = { version = "1.36.0", features = ["macros"] }
vercel_runtime = { version = "1.1.1" }
url = "2.5.0"
usvg = "0.40.0"

# Logging
log = { workspace = true }
