[package]
name = "dyn-web-api"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
path = "rust/lib.rs"

[[bin]]
name = "graphic"
path = "api/graphic.rs"

[features]
default = []
tracing = [
    "dyn-arb-core/tracing",
    "dyn-arb-svg-builder/tracing",
    "dyn-arb-dtif/tracing",
]

[dependencies]
dyn-arb-asset = { path = "../../crates/arb_asset" }
dyn-arb-core = { path = "../../crates/arb_core", features = ["specta_support"] }
dyn-arb-dtif = { path = "../../crates/arb_dtif" }
dyn-arb-bundles = { path = "../../crates/arb_bundles", features = [
    "specta_support",
] }
dyn-arb-svg-builder = { path = "../../crates/arb_svg_builder", features = [
    "specta_support",
] }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_transform = { workspace = true }

fontdb = "0.16.2"
tiny-skia = "0.11.4"
reqwest = "0.12.2"
resvg = "0.40.0"
svg2pdf = "0.10.0"
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
tokio = { version = "1.36.0", features = ["macros"] }
vercel_runtime = { version = "1.1.1" }
url = "2.5.0"
usvg = "0.40.0"

# Logging
log = { workspace = true }
