[package]
name = "dyn-arb-bundles"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Commercial License"
authors = { workspace = true }

[features]
default = ["lua_scripts"]
specta_support = [
    "dep:serde",
    "dep:specta",
    "dyn-arb-asset/specta_support",
    "dyn-arb-lua/specta_support",
    "dyn-attributed-string/specta_support",
    "dyn-utils/specta_support",
]
utoipa_support = [
    "dep:utoipa",
    "dyn-arb-asset/utoipa_support",
    "dyn-arb-lua/utoipa_support",
    "dyn-attributed-string/utoipa_support",
    "dyn-utils/utoipa_support",
]
lua_scripts = ["dep:dyn-arb-lua"]
tracing = []

[dependencies]
dyn-arb-asset = { path = "../arb_asset" }
dyn-attributed-string = { path = "../attributed_string" }
dyn-utils = { path = "../utils" }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_hierarchy = { workspace = true }
bevy_transform = { workspace = true }
glam = { workspace = true }
smallvec = { workspace = true }
tiny-skia-path = { workspace = true }
taffy = "0.5.1"

# Logging
log = { workspace = true }

# specta_support (feature)
specta = { workspace = true, features = [
    "serde",
    "glam",
    "bevy_ecs",
], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

# utoipa_support (feature)
utoipa = { workspace = true, optional = true }

# lua_scripts (feature) 
dyn-arb-lua = { path = "../arb_lua", optional = true }
