[package]
name = "dyn-arb-core"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Commercial License"
authors = { workspace = true }

[features]
default = ["lua_scripts"]
specta_support = [
    "dyn-arb-bundles/specta_support",
    "dyn-arb-lua/specta_support",
    "dyn-utils/specta_support",
    "dyn-attributed-string/specta_support",
]
lua_scripts = [
    "specta_support",
    "dep:dyn-arb-lua",
    "dep:gc-arena",
    "dep:piccolo",
]
tracing = []

[dependencies]
dyn-arb-asset = { path = "../arb_asset" }
dyn-arb-bundles = { path = "../arb_bundles" }
dyn-attributed-string = { path = "../attributed_string" }
dyn-utils = { path = "../utils" }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_hierarchy = { workspace = true }
bevy_transform = { workspace = true }
glam = { workspace = true }
smallvec = { workspace = true }
tiny-skia-path = { workspace = true }
taffy = "0.5.1"
hashbrown = "0.14.5"

# Logging
log = { workspace = true }

# lua_scripts (feature)
dyn-arb-lua = { path = "../arb_lua", optional = true }
gc-arena = { version = "0.5.3", features = [
    "allocator-api2",
    "hashbrown",
], optional = true }
piccolo = { git = "https://github.com/kyren/piccolo", rev = "df3e53e", optional = true }

[dev-dependencies]
env_logger = { workspace = true }
serde_json = { workspace = true }
