[package]
name = "attributed-string"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = []
tracing = []

[dependencies]
fontdb = "0.16.0"
ordered-float = "4.2.0"
glam = { workspace = true }
rustybuzz = "0.13.0"
ropey = "1.6.1"
rust-lapper = { path = "/Users/benno/Desktop/workspace/contribution/code/rust-lapper" }
smallvec = { workspace = true }
strict-num = "0.2.0"
tiny-skia-path = { workspace = true }
unicode-bidi = "0.3"
unicode-linebreak = "0.1.5"
unicode-script = "0.5"
unicode-vo = "0.1"
self_cell = "1.0.3"

# Logging
log = { workspace = true }

[dev-dependencies]
env_logger = "0.11.3"
