[package]
name = "dyn-attributed-string"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = []
serde_support = [
    "dep:serde",
    "dep:specta",
    "dyn-utils/serde_support",
    "dyn-fonts-book/serde_support",
]
tracing = []

[dependencies]
dyn-fonts-book = { path = "../fonts_book" }
dyn-utils = { path = "../utils" }
fontdb = "0.16.0"
glam = { workspace = true }
rustybuzz = "0.13.0"
rust-lapper = { git = "https://github.com/bennoinbeta/rust-lapper.git", rev = "a03107f" }
smallvec = { workspace = true }
tiny-skia-path = { workspace = true }
unicode-bidi = "0.3"
unicode-linebreak = "0.1.5"
unicode-script = "0.5"
unicode-vo = "0.1"

# serde_support (feature)
specta = { workspace = true, features = ["serde", "glam"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

# Logging
log = { workspace = true }

[dev-dependencies]
env_logger = "0.11.3"
