[package]
name = "dyn-attributed-string"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = []
specta_support = [
    "dep:serde",
    "dep:specta",
    "dyn-utils/specta_support",
    "dyn-fonts-book/specta_support",
]
utoipa_support = [
    "dep:utoipa",
    "dyn-utils/utoipa_support",
    "dyn-fonts-book/utoipa_support",
]
tracing = []

[dependencies]
dyn-fonts-book = { path = "../fonts_book" }
dyn-utils = { path = "../utils" }
either = "1.10.0"
fontdb = "0.18.0"
glam = { workspace = true }
rustybuzz = "0.14.0"
rust-lapper = { git = "https://github.com/bennoinbeta/rust-lapper.git", rev = "a03107f" }
smallvec = { workspace = true }
tiny-skia-path = { workspace = true }
unicode-bidi = "0.3.15"
unicode-linebreak = "0.1.5"
unicode-script = "0.5.6"
unicode-vo = "0.1.0"

# specta_support (feature)
specta = { workspace = true, features = ["serde", "glam"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

# utoipa_support (feature)
utoipa = { workspace = true, optional = true }

# Logging
log = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
tiny-skia = "0.11.4"
