[package]
name = "dyn_bevy_render_skeleton"
version = "0.0.1"
edition = "2021"
description = "Provides stripped down rendering functionality for Bevy Engine"
homepage = "https://dyn.art/github"
repository = "https://github.com/dyndotart/monorepo"
license = "AGPL-3.0-or-later"

[features]
default = []

[dependencies]
bevy_ecs = "0.12"
bevy_app = "0.12"
bevy_utils = "0.12"
bevy_time = "0.12"
