[package]
name = "dyn_bevy_render_skeleton"
version = "0.0.1"
description = "Stripped down rendering skeleton for Bevy Engine. Based on `bevy_render`."
edition = "2021"
homepage = "https://s.dyn.art/github"
repository = "https://github.com/dyndotart/monorepo"
license = "AGPL-3.0-or-later"

[features]
default = []
tracing = []

[dependencies]
bevy_ecs = "0.12.1"
bevy_app = "0.12.1"
bevy_utils = "0.12.1"
bevy_time = "0.12.1"
