[package]
name = "dyn-cnv-dtif"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Commercial License"
authors = { workspace = true }

[features]
default = ["lua_scripts"]
specta_support = [
    "dep:serde",
    "dep:specta",
    "dyn-cnv-bundles/specta_support",
    "dyn-cnv-lua/specta_support",
    "dyn-utils/specta_support",
]
utoipa_support = [
    "dep:utoipa",
    "dyn-cnv-bundles/utoipa_support",
    "dyn-cnv-lua/utoipa_support",
    "dyn-utils/utoipa_support",
]
lua_scripts = ["specta_support", "dep:dyn-cnv-lua"]
tracing = []

[dependencies]
dyn-cnv-bundles = { path = "../cnv_bundles" }
dyn-utils = { path = "../utils" }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
glam = { workspace = true }

# Logging
log = { workspace = true }

# specta_support (feature)
serde = { workspace = true, features = ["derive"], optional = true }
specta = { workspace = true, features = [
    "serde",
    "glam",
    "serde_json",
], optional = true }

# utoipa_support (feature)
utoipa = { workspace = true, optional = true }

# lua_scripts (feature)
dyn-cnv-lua = { path = "../cnv_lua", optional = true }
