[package]
name = "dyn-comp-core"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Commercial License"
authors = { workspace = true }

[features]
default = []
serde_support = [
    "dyn-comp-bundles/serde_support",
    "dyn-utils/serde_support",
    "dyn-attributed-string/serde_support",
]
tracing = []

[dependencies]
dyn-comp-asset = { path = "../comp_asset" }
dyn-comp-bundles = { path = "../comp_bundles" }
dyn-attributed-string = { path = "../attributed_string" }
dyn-utils = { path = "../utils" }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_hierarchy = { workspace = true }
bevy_transform = { workspace = true }
glam = { workspace = true }
smallvec = { workspace = true }
tiny-skia-path = { workspace = true }
taffy = "0.4.3"
hashbrown = "0.14.5"

# Logging
log = { workspace = true }
