[package]
name = "dyn-comp-dtif"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Commercial License"
authors = { workspace = true }

[features]
default = ["lua_scripts"]
serde_support = [
    "dep:serde",
    "dep:specta",
    "dyn-utils/serde_support",
    "dyn-comp-bundles/serde_support",
]
lua_scripts = [
    "dep:gc-arena",
    "dep:piccolo",
    "dep:serde_json",
    "dep:thiserror",
    "serde_support",
]
tracing = []

[dependencies]
dyn-comp-bundles = { path = "../comp_bundles" }
dyn-utils = { path = "../utils" }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
glam = { workspace = true }

# Logging
log = { workspace = true }

# serde_support (feature)
serde = { workspace = true, features = ["derive"], optional = true }
specta = { workspace = true, features = ["serde", "glam"], optional = true }

# lua_scripts (feature) 
gc-arena = { version = "0.5.3", features = [
    "allocator-api2",
    "hashbrown",
], optional = true }
piccolo = { git = "https://github.com/kyren/piccolo", rev = "df3e53e", optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { version = "1.0.61", optional = true }

[dev-dependencies]
env_logger = "0.11.3"
