[package]
name = "dyn-comp-dtif"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Commercial License"
authors = { workspace = true }

[features]
default = ["lua_scripts"]
serde_support = [
    "dep:serde",
    "dep:specta",
    "dyn-comp-bundles/serde_support",
    "dyn-comp-lua/serde_support",
    "dyn-utils/serde_support",
]
lua_scripts = ["dep:dyn-comp-lua"]
tracing = []

[dependencies]
dyn-comp-bundles = { path = "../comp_bundles" }
dyn-utils = { path = "../utils" }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
glam = { workspace = true }

# Logging
log = { workspace = true }

# serde_support (feature)
serde = { workspace = true, features = ["derive"], optional = true }
specta = { workspace = true, features = [
    "serde",
    "glam",
    "serde_json",
], optional = true }

# lua_scripts (feature)
dyn-comp-lua = { path = "../comp_lua", optional = true }
