[package]
name = "dyn-comp-interaction"
version = "0.0.1"
description = ""
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = []
serde_support = ["dep:serde", "dep:specta", "dyn-comp-bundles/serde_support"]
tracing = []

[dependencies]
dyn-comp-bundles = { path = "../comp_bundles" }
dyn-comp-core = { path = "../comp_core" }
dyn-utils = { path = "../utils" }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_transform = { workspace = true }
glam = { workspace = true }

# Logging
log = { workspace = true }

# serde_support (feature)
specta = { workspace = true, features = [
    "serde",
    "glam",
    "bevy_ecs",
], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
